syntax = "proto3";

package v1;

import "client.proto";
import "service.proto";
import "request.proto";
import "response.proto";

service PolarisGRPC {
  // 客户端上报
  rpc ReportClient(Client) returns(Response) {}

  // 被调方注册服务实例
  rpc RegisterInstance(Instance) returns(Response) {}
  // 被调方反注册服务实例
  rpc DeregisterInstance(Instance) returns(Response) {}

  // 统一发现接口
  rpc Discover(stream DiscoverRequest) returns(stream DiscoverResponse) {}

  // 被调方上报心跳
  rpc Heartbeat(Instance) returns(Response) {}
}
